TRUS-1254| Fixed spacing on print pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,14 +18,26 @@ body:not(.js-enabled) {
     }
 }
 
-// ----------------
-// Trusts Add-to-row
-// this fixes the spacing between 56 character names and the next column for print pages
-// ----------------
+// provides padding between the 1st and 2nd column unless on mobile
 @include govuk-media-query($from: tablet) {
-    .hmrc-add-to-a-list__identifier {
-        padding-right: 15px;
+    .hmrc-add-to-a-list__identifier__first {
+        padding-right: govuk-spacing(4)
     }
+}
+
+// Fallback break for long names
+.hmrc-add-to-a-list__identifier__first {
+    word-break: break-all;
+}
+
+// ----------------
+// HMRC Add-to-list pattern - wrapping for unbreakable text
+// taken from govuk-frontend summary list
+// https://github.com/alphagov/govuk-frontend/blob/main/src/govuk/components/summary-list/_index.scss#L47
+// ----------------
+.hmrc-add-to-a-list__identifier {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 // ----------------
